examples/test/testpolicy14473.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14473
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key1: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value38
      podSelector:
        matchLabels:
          key25: value47
          key45: value26
          key48: value1
